--- a/index.html
+++ b/index.html
@@ -57,6 +57,22 @@
         </nav>
     </section>
 
+    <!--Showcase-->
+    <section class="bg-dark text-light p-5 text-center text-sm-start">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <div class="align-self-start">
+                    <h1> Today's <span class="text-warning">Deals</span></h1>
+                    <p class="lead my-4">We offer great discounts on selected products daily. Check out today's amazing offers</p>
+                    <button class="btn btn-warning btn-lg">Get Offers</button>
+                </div>
+
+                <img class="showcase-img img-fluid w-75 d-none d-md-block" src="./images/showcase.jpg">
+            </div>
+        </div>
+
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
