--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <!--Showcase-->
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <section class="bg-dark text-light p-5 text-center text-sm-start p-lg-0 pt-lg-5">
         <div class="container">
             <div class="d-md-flex justify-content-between align-items-center">
                 <div class="align-self-start">
@@ -70,7 +70,61 @@
                 <img class="showcase-img img-fluid w-75 d-none d-md-block" src="./images/showcase.jpg">
             </div>
         </div>
+    </section>
 
+    <!--Feature section-->
+    <section class="bg-dark p-1 text-light">
+        <div class="container rows-auto">
+           <div class="row g-4">
+                <div class="col-md">
+                    <div class="card bg-light text-dark">
+                        <div class="card-body text-center">
+                            <div class="h1">
+                                <i class="bi bi-truck"></i>
+                            </div>
+                            <h6 class="card-title">Free Shipping & Return</h6>
+                            <p class="card-text">Free shipping on orders above R995</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md">
+                    <div class="card bg-light text-dark text">
+                        <div class="card-body text-center">
+                            <div class="h1">
+                                <i class="bi bi-cash-stack"></i>
+                            </div>
+                            <h6 class="card-title">Money back Guarantee</h6>
+                            <p class="card-text">100% Money back guarantee on customer dissatisfaction</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md">
+                    <div class="card bg-light text-dark">
+                        <div class="card-body text-center">
+                            <div class="h1">
+                                <i class="bi bi-clock"></i>
+                            </div>
+                            <h6 class="card-title">24/7 Online Support</h6>
+                            <p class="card-text">Customer service always available</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md">
+                    <div class="card bg-light text-dark">
+                        <div class="card-body text-center">
+                            <div class="h1">
+                                <i class="bi bi-file-lock"></i>
+                            </div>
+                            <h6 class="card-title">Secure Payment</h6>
+                            <p class="card-text">Secure and reliable payment gateway</p>
+                        </div>
+                    </div>
+                </div>
+           </div> 
+        </div>
     </section>
 
 
