--- a/index.html
+++ b/index.html
@@ -133,19 +133,21 @@
             <h1 class="text-center text-warning">SALE</h1>
 
             <div class="row g-4">
-                <div class="col-md-6 col-lg-3 bg-light">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/denim_jeans2.jpg" class="card-img-top-one ihv img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">High Waist Skinny Jeans</h6>
+                            <p class="card-text fs-2">R450</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
-                      </div>
+                    </div>
                 </div>
+
+
             </div>
 
-            
+
         </div>
     </section>
 
