--- a/index.html
+++ b/index.html
@@ -135,10 +135,32 @@
             <div class="row g-4">
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
-                        <img src="./images/denim_jeans2.jpg" class="card-img-top-one ihv img-fluid" alt="...">
+                        <img src="./images/denim_jeans2.jpg" class="card-img-top-one ihv-one img-fluid" alt="...">
                         <div class="card-body text-dark">
                             <h6 class="card-title">High Waist Skinny Jeans</h6>
                             <p class="card-text fs-2">R450</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/yeezy_1.jpg" class="card-img-top-two ihv-two img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Yeezy Boost 350</h6>
+                            <p class="card-text fs-2">R1999</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/reddress_1.jpg" class="card-img-top-three ihv-three img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Ark Lace Ruffle Hem</h6>
+                            <p class="card-text fs-2">R599</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
