--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
                     </div>
                 </div>
 
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/grey_1.jpg" class="card-img-top-four ihv-four img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Unisex Grey Sweat Shirt and Pant</h6>
+                            <p class="card-text fs-2">R610</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
 
