--- a/index.html
+++ b/index.html
@@ -176,12 +176,56 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
 
+            <div class="row mt-4">
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/whitehat_1.jpg" class="card-img-top-five ihv-five img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">White Baseball Hat</h6>
+                            <p class="card-text fs-2">R250</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/hoodie_1.jpg" class="card-img-top-six ihv-six img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Men Letter Graphic Hoodie</h6>
+                            <p class="card-text fs-2">R450</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/reddress_1.jpg" class="card-img-top-three ihv-three img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Ark Lace Ruffle Hem</h6>
+                            <p class="card-text fs-2">R599</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/grey_1.jpg" class="card-img-top-four ihv-four img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Unisex Grey Sweat Shirt and Pant</h6>
+                            <p class="card-text fs-2">R610</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
