--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <img src="./images/grey_1.jpg" class="card-img-top-four ihv-four img-fluid" alt="...">
                         <div class="card-body text-dark">
                             <h6 class="card-title">Unisex Grey Sweat Shirt and Pant</h6>
-                            <p class="card-text fs-2">R610</p>
+                            <p class="card-text fs-2">R510</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
@@ -203,10 +203,10 @@
 
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
-                        <img src="./images/reddress_1.jpg" class="card-img-top-three ihv-three img-fluid" alt="...">
+                        <img src="./images/blacktee_1.jpg" class="card-img-top-seven ihv-seven img-fluid" alt="...">
                         <div class="card-body text-dark">
-                            <h6 class="card-title">Ark Lace Ruffle Hem</h6>
-                            <p class="card-text fs-2">R599</p>
+                            <h6 class="card-title">Men Letter Graphic Tee</h6>
+                            <p class="card-text fs-2">R199</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
