Add adidas hoodie

--- a/index.html
+++ b/index.html
@@ -214,10 +214,56 @@
 
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
-                        <img src="./images/grey_1.jpg" class="card-img-top-four ihv-four img-fluid" alt="...">
+                        <img src="./images/adidas_1.jpg" class="card-img-top-eight ihv-eight img-fluid" alt="...">
                         <div class="card-body text-dark">
-                            <h6 class="card-title">Unisex Grey Sweat Shirt and Pant</h6>
-                            <p class="card-text fs-2">R610</p>
+                            <h6 class="card-title">Adidas Drawstring Hoodie</h6>
+                            <p class="card-text fs-2">R349</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row mt-4">
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/whitehat_1.jpg" class="card-img-top-five ihv-five img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">White Baseball Hat</h6>
+                            <p class="card-text fs-2">R250</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/hoodie_1.jpg" class="card-img-top-six ihv-six img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Men Letter Graphic Hoodie</h6>
+                            <p class="card-text fs-2">R450</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/blacktee_1.jpg" class="card-img-top-seven ihv-seven img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Men Letter Graphic Tee</h6>
+                            <p class="card-text fs-2">R199</p>
+                            <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3 bg-dark">
+                    <div class="card p-2 w-100">
+                        <img src="./images/adidas_1.jpg" class="card-img-top-eight ihv-eight img-fluid" alt="...">
+                        <div class="card-body text-dark">
+                            <h6 class="card-title">Adidas Drawstring Hoodie</h6>
+                            <p class="card-text fs-2">R349</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
