Add chain and boot

--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
             <div class="row mt-4">
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
-                        <img src="./images/whitehat_1.jpg" class="card-img-top-five ihv-five img-fluid" alt="...">
+                        <img src="./images/chain_1.jpg" class="card-img-top-nine ihv-nine img-fluid" alt="...">
                         <div class="card-body text-dark">
-                            <h6 class="card-title">White Baseball Hat</h6>
-                            <p class="card-text fs-2">R250</p>
+                            <h6 class="card-title">Minimalist Chain Necklace</h6>
+                            <p class="card-text fs-2">R169</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
@@ -238,10 +238,10 @@
 
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
-                        <img src="./images/hoodie_1.jpg" class="card-img-top-six ihv-six img-fluid" alt="...">
+                        <img src="./images/boot_1.jpg" class="card-img-top-ten ihv-ten img-fluid" alt="...">
                         <div class="card-body text-dark">
-                            <h6 class="card-title">Men Letter Graphic Hoodie</h6>
-                            <p class="card-text fs-2">R450</p>
+                            <h6 class="card-title">Lace-up Leather Boots</h6>
+                            <p class="card-text fs-2">R899</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
