Style product section

--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
 
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
-                        <img src="./images/blacktee_1.jpg" class="card-img-top-seven ihv-seven img-fluid" alt="...">
+                        <img src="./images/nike_1.jpg" class="card-img-top-eleven ihv-eleven img-fluid" alt="...">
                         <div class="card-body text-dark">
-                            <h6 class="card-title">Men Letter Graphic Tee</h6>
-                            <p class="card-text fs-2">R199</p>
+                            <h6 class="card-title">Nike Air Jordan High Top</h6>
+                            <p class="card-text fs-2">R1799</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
@@ -260,10 +260,10 @@
 
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
-                        <img src="./images/adidas_1.jpg" class="card-img-top-eight ihv-eight img-fluid" alt="...">
+                        <img src="./images/leatherjack_1.jpg" class="card-img-top-twelve ihv-twelve img-fluid" alt="...">
                         <div class="card-body text-dark">
-                            <h6 class="card-title">Adidas Drawstring Hoodie</h6>
-                            <p class="card-text fs-2">R349</p>
+                            <h6 class="card-title">Men Zip-up Leather Jacket</h6>
+                            <p class="card-text fs-2">R300</p>
                             <a href="#" class="btn btn-warning btn-lg">ADD TO BAG</a>
                         </div>
                     </div>
