--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </div>
             </div>
 
-            <div class="row mt-4">
+            <div class="row mt-4 g-4">
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
                         <img src="./images/whitehat_1.jpg" class="card-img-top-five ihv-five img-fluid" alt="...">
@@ -224,7 +224,7 @@
                 </div>
             </div>
 
-            <div class="row mt-4">
+            <div class="row mt-4 g-4">
                 <div class="col-md-6 col-lg-3 bg-dark">
                     <div class="card p-2 w-100">
                         <img src="./images/chain_1.jpg" class="card-img-top-nine ihv-nine img-fluid" alt="...">
@@ -269,10 +269,32 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        
+        </div>        
     </section>
+
+    <!-- Footer -->
+    <footer class="p-5 bg-light text-dark position-relative">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-4 bg-light">
+                    <h5>Sign up for our style news</h5>
+                    <button class="btn btn-warning btn-lg"
+                    data-bs-toggle="modal"
+                    data-bs-target="#enroll">Sign Up
+                    </button>        
+                </div>
+
+                <div class="col-md-4 bg-light align-self-center">
+                    <p class="lead">Copyright &copy; 2022 The Ark</p>       
+                </div>
+
+                <a href="#" class="col-md-4 bg-light justify-self-end position-absolute bottom-0 end-0 p-5 d-none d-md-block">
+                    <i class="bi bi-arrow-up-circle h1"></i>
+                </a>
+            </div>
+
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
