--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@
         </div>        
     </section>
 
-    <!-- Footer -->
+    <!-- Footer
+        The horizontal form is included in a modal which is triggered by clicking the button in the footer 
+    -->
     <footer class="p-5 bg-light text-dark position-relative">
         <div class="container text-center">
             <div class="row">
@@ -297,37 +299,38 @@
     </footer>
 
     <!-- Modal -->
-<div class="modal fade" id="sign-up" tabindex="-1" aria-labelledby="sign-upLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="sign-upLabel">Sign up for style news</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <p class="lead">Fill out this form</p>
-            <form>
-                <div class="row mb-3">
-                    <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail">
+    <div class="modal fade" id="sign-up" tabindex="-1" aria-labelledby="sign-upLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            <div class="modal-header">
+                <img class="img-logo img-fluid" src="./images/ark_logo.png" alt="">
+                <h1 class="modal-title fs-5 ms-auto" id="sign-upLabel">Sign up for style news</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p class="lead">Fill out this form</p>
+                <form>
+                    <div class="row mb-3">
+                        <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail">
+                        </div>
                     </div>
-                </div>
-                <div class="row mb-3">
-                    <label for="inputPhone" class="col-sm-2 col-form-label">Phone</label>
-                    <div class="col-sm-10">
-                      <input type="phone" class="form-control" id="inputPhone">
+                    <div class="row mb-3">
+                        <label for="inputPhone" class="col-sm-2 col-form-label">Phone</label>
+                        <div class="col-sm-10">
+                            <input type="phone" class="form-control" id="inputPhone">
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-success">Submit</button>
+            </div>
+            </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-success">Submit</button>
-        </div>
-      </div>
     </div>
-  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
